Add unit tests using node:test
Cover git, config, create, list, and remove modules with 28 tests.
Zero new dependencies — uses built-in node:test and node:assert.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "bin": {
     "wt": "./bin/wt.js"
   },
+  "scripts": {
+    "test": "node --test 'test/*.test.js'"
+  },
   "dependencies": {
     "commander": "^12.1.0"
   }
